<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:minWidth="250dp"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee_regular"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/helper_info_title"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/approve"
        android:src="@mipmap/ic_accept" />

    <TextView
        android:id="@+id/helperName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee_regular"
        android:text="@string/name_ex"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/helperExp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee_regular"
        android:layout_marginBottom="20dp"
        android:text="@string/experience"
        android:textColor="@color/yellow" />

    <RatingBar
        android:id="@+id/helperRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="center"
        android:numStars="5"
        android:isIndicator="false"
        android:clickable="false"
        android:layout_marginBottom="20dp"
        android:progressTint="@color/yellow"
        android:rating="4" />

    <ImageView
        android:id="@+id/callHelper"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/call"
        android:src="@mipmap/ic_call" />

</LinearLayout>