<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:minWidth="270dp"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:fontFamily="@font/bungee_regular"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/yellow"/>

    <EditText
        android:id="@+id/resetEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textColorHint="@color/red"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:ems="10"
        android:hint="@string/new_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="5dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textColorHint="@color/red"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/rePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:ems="10"
        android:hint="@string/re_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="5dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textColorHint="@color/red"
        android:textSize="18sp" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:background="@color/white"
        android:fontFamily="@font/bungee_regular"
        android:text="@string/resetTi"
        android:textColor="@color/red"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/progressBarReset"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>